1)Subject eke Delete eka wada krnnah 2)Teacher eke View Module eke subject ek pennaddi code kellak watenwa 3)School wala View ek explicit error ekak enaw

--- a/src/main/resources/templates/school/school.html
+++ b/src/main/resources/templates/school/school.html
@@ -42,9 +42,8 @@
 
 
                 <td>
-                    <a data-th-href="${'/school/view/'+ school.id}">
-                        <button class="btn btn-info">View</button>
-                    </a>
+                    <a data-th-href="${'/school/view/'+ school.id}"><button class="btn btn-info">View</button></a>
+
                     <a data-th-href="${'/school/edit/'+ school.id}">
                         <button class="btn btn-success">Edit</button>
                     </a>
