--- a/src/main/resources/templates/batch/batch-detail.html
+++ b/src/main/resources/templates/batch/batch-detail.html
@@ -47,13 +47,13 @@
         <div class="form-group">
             <label data-th-for="${teacherName}" class="col-sm-3 control-label">Teacher</label>
             <div class="col-sm-6">
-                <p type="text" id="teacherName" class="form-control" data-th-text="*{batchDetail.teacherName}">
+                <p type="text" id="teacherName" class="form-control" data-th-text="*{batchDetail.teacher.firstName}">
             </div>
         </div>
         <div class="form-group">
             <label data-th-for="${subjectName}" class="col-sm-3 control-label">Subject Name</label>
             <div class="col-sm-6">
-                <p type="text" id="subjectName" class="form-control" data-th-text="*{batchDetail.subjectName}">
+                <p type="text" id="subjectName" class="form-control" data-th-text="*{batchDetail.subject.name}">
             </div>
         </div>
 
@@ -68,56 +68,6 @@
     </div>
     <div class="col-sm-1"></div>
 </div>
-<!--&lt;!&ndash;Batch detail&ndash;&gt;-->
-<!--<div class="container-fluid" data-th-fragment="batchDetail">-->
-<!--    &lt;!&ndash;Class Referance&ndash;&gt;-->
-<!--    <div class="form-row text-right">-->
-<!--        <div class="col-md-4">-->
-<!--            <label class="control-label" data-th-for="${classReferance}">Class Referance :</label>-->
-<!--        </div>-->
-<!--        <div class="col-md-8">-->
-<!--            <p class="form-control" data-th-text="${batchDetail.classReferance}"></p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;Grade&ndash;&gt;-->
-<!--    <div class="form-row text-right">-->
-<!--        <div class="col-md-4">-->
-<!--            <label class="control-label" data-th-for="${grade}">Grade :</label>-->
-<!--        </div>-->
-<!--        <div class="col-md-8">-->
-<!--            <p class="form-control" data-th-text="${batchDetail.grade}"></p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;Year&ndash;&gt;-->
-<!--    <div class="form-row text-right">-->
-<!--        <div class="col-md-4">-->
-<!--            <label class="control-label" data-th-for="${year}">year :</label>-->
-<!--        </div>-->
-<!--        <div class="col-md-8">-->
-<!--            <p class="form-control" data-th-text="${batchDetail.year}"></p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;Teacher&ndash;&gt;-->
-<!--    <div class="form-row text-right">-->
-<!--        <div class="col-md-4">-->
-<!--            <label class="control-label" data-th-for="${teacherName}">Teacher Name :</label>-->
-<!--        </div>-->
-<!--        <div class="col-md-8">-->
-<!--            <p class="form-control" data-th-text="${batchDetail.teacherName}"></p>-->
-<!--        </div>-->
-<!--    </div>-->
-
-
-<!--</div>-->
-<!--&lt;!&ndash;Button&ndash;&gt;-->
-<!--<div class="form-batch col-md-12 col-sm-12 text-center flex-column ">-->
-<!--    <a href="/batch">-->
-<!--        <button class="btn btn-success" tabindex="21" type="submit">-->
-<!--            Back-->
-<!--        </button>-->
-<!--    </a>-->
-<!--</div>-->
-
 
 </body>
 </html>
