--- a/src/main/resources/templates/teacher/teacher.html
+++ b/src/main/resources/templates/teacher/teacher.html
@@ -52,7 +52,7 @@
 <div class="row bg-light">
     <div class="col-4"></div>
     <div class="col-4">
-        <h1>Student Management</h1>
+        <h1>Teacher Management</h1>
     </div>
     <div class="col-4"> <a href="/teacher/new">
         <button class="btn btn-primary">Register a new Teacher</button>
@@ -60,9 +60,9 @@
 </div>
 
 <div class="container-fluid row">
-    <div class="col-lg-1"></div>
-    <div class="col-lg-10">
-        <table class="table table-striped table-inverse table-responsive container" id="myTable"  >
+    <div class="col-2"></div>
+    <div class="col-8">
+        <table class="table table-striped table-inverse" id="myTable"  >
             <thead class="thead-inverse">
             <tr>
                 <th>Index</th>
@@ -89,7 +89,7 @@
             </tbody>
         </table>
     </div>
-    <div class="col-lg-1"></div>
+    <div class="col-2"></div>
 </div>
 
 <!--footer is included-->
