Employee backend was added

--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -1,130 +1,260 @@
 <!DOCTYPE html>
-<html lang="en">
-<!--Styles, meta data, and title are included-->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
 </head>
 <body>
-<!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
-<div class="row bg-link">
-    <div class="col-4">
+<!--heading Area-->
+<div class="container-fluid  form-Border">
+    <div class="row text-center formManagement border-info">
+        <div class="col">
+            <a class="btn btn-outline-info" href="/home">&nbsp; Back To Home
+            </a>
+        </div>
+
+        <div class="col">
+            <a href="/employee" class="btn btn-info">View Employees
+            </a>
+        </div>
+    </div>
+    <div>
+        <div class="col">
+            <h4 class="text-info text-center">
+                <strong>
+                    <p data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}"></p>
+                </strong>
+            </h4>
+        </div>
+    </div>
+</div>
+<!--details-->
+<div data-th-fragment="employeeDetailsFragment" class="container-fluid formBorder">
+    <div class="col-sm-12 flex-column text-dark">
+        <div class="row">
+            <!--Left Side-->
+            <div class="form-group col-md-6 col-sm-6 flex-column">
+                <div class="form-row text-right ">
+                    <div class="col-md-4">
+                        <label class="control-label" for="id">ID :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="id" data-th-text="${employeeDetail.id}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="employeeCode">Employee Id :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="employeeCode" data-th-text="${employeeDetail.code}" class="display_detail"></p>
+                    </div>
+                </div>
+
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="name">Name :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="name" data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="callingName">Calling Name :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="callingName" data-th-text="${employeeDetail.callingName}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="nic">NIC No :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="nic" data-th-text="${employeeDetail.nic}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="gender">Gender :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="gender" data-th-text="${employeeDetail.gender.gender}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="dateOfBirth">Birth date :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="dateOfBirth" data-th-text="${employeeDetail.dateOfBirth}" class="display_detail">Error Birthday</p>
+                    </div>
+                </div>
+
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="designation">Designation :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="designation" data-th-text="${employeeDetail.designation.designation}" class="display_detail">
+                        </p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="civilStatus">Civil State :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="civilStatus" data-th-text="${employeeDetail.civilStatus.civilStatus}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="employeeStatus">Employee Status :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="employeeStatus" data-th-text="${employeeDetail.employeeStatus.employeeStatus}" class="display_detail"></p>
+                    </div>
+                </div>
+            </div>
+            <!--Right Side-->
+            <div class="form-group col-md-6 col-sm-6 text-right flex-column">
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="address">Address :</label>
+                    </div>
+                    <div class="col-md-8 text-right">
+                        <p id="address" class="display_detail " data-th-utext="${employeeDetail.address}"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="mobileOne">Mobile One No :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="mobileOne" data-th-text="${employeeDetail.mobileOne}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="mobileTwo">Mobile Two No :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="mobileTwo" data-th-text="${employeeDetail.mobileTwo}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="land">Land No :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="land" data-th-text="${employeeDetail.land}" class="display_detail"></p>
+                    </div>
+                </div>
+                <!--<div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="email">Email :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="email" data-th-text="${employeeDetail.email}" class="display_detail"></p>
+                    </div>
+                </div>-->
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="officeEmail">Office Email :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="officeEmail" data-th-text="${employeeDetail.officeEmail}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="dateOfAssignment">Date Of Assignment :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="dateOfAssignment" data-th-text="${{employeeDetail.dateOfAssignment}}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="createdBy">Created By :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="createdBy" data-th-text="${employeeDetail.createdBy}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="createdAt">Created At :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="createdAt" data-th-text="${#temporals.format(employeeDetail.createdAt, 'dd-MM-yyyy HH:mm')}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="updatedBy">Updated By :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="updatedBy" data-th-text="${employeeDetail.updatedBy}" class="display_detail"></p>
+                    </div>
+                </div>
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" for="updatedAt">Updated At :</label>
+                    </div>
+                    <div class="col-md-8">
+                        <p id="updatedAt" data-th-text="${{employeeDetail.updatedAt}}" class="display_detail"></p>
+                    </div>
+                </div>
+            </div>
+
+            <!--images-->
+            <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
+                <div class="col" id="photoDetails">
+                    <div>
+                        <label class="control-label ">Photo Details : </label>
+                    </div>
+                    <div class="row">
+                        <div class="col" id="filesList" data-th-each="file, rowStat: ${files}">
+                            <div class="col">
+                                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                    <div class="card text-center">
+                                        <div class="card-body">
+                                            <img id="img" class="rounded"
+                                                 style="height: 150px; widdata-th- 150px; border-radius: 10px"
+                                                 alt="Employee images" data-th-src="${file.url}"/>
+                                        </div>
+                                        <div class="card-footer bg-secondary text-light text-center">
+                                            <p id="imgName" data-th-text="${file.filename}"></p>
+                                            <span> Uploaded Date :
+                                            <p id="imgCreateAt" data-th-text="${{file.createAt}}"></p>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
-    <div class="col-4">
-        <h1>Employee Details</h1>
-    </div>
-    <div class="col-4">
-        <a href="/employee/add">
-            <button class="btn btn-primary" align="center">Create a Discount</button>
+    <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
+        <a href="/employee">
+            <button class="btn btn-outline-secondary" type="button" tabindex="10">
+                <i class="fa fa-arrow-circle-left " style="font-size: 20px"></i>&nbsp; &nbsp;Back
+            </button>
         </a>
     </div>
-</div>
-<!--Discount detail-->
-<div class=" row container-fluid" data-th-fragment="employeeDetail">
-    <div class="col-sm-5">
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${payRoleNumber}">Employee ID</label>
-            <div class="col-sm-6">
-                <p type="text" id="payRoleNumber" class="form-control" data-th-text="*{employeeDetail.payRoleNumber}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${title}">Title</label>
-            <div class="col-sm-6">
-                <p type="text" id="title" class="form-control" data-th-text="*{employeeDetail.title}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${callingName}">Calling name</label>
-            <div class="col-sm-6">
-                <p type="text" id="callingName" class="form-control" data-th-text="*{employeeDetail.callingName}">            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${name}">Full Name</label>
-            <div class="col-sm-6">
-                <p type="text" id="name" class="form-control" data-th-text="*{employeeDetail.name}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="gender">Gender</label>
-            <div class="col-sm-6">
-                <p type="text" id="gender" class="form-control" data-th-text="*{employeeDetail.callingName}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="nic">NIC</label>
-            <div class="col-sm-6">
-                <p type="text" id="nic" class="form-control" data-th-text="*{employeeDetail.nic}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="dateOfBirth">Date of Birth</label>
-            <div class="col-sm-6">
-                <p type="text" id="dateOfBirth" class="form-control" data-th-text="*{employeeDetail.dateOfBirth}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="bloodGroup">Blood group</label>
-            <div class="col-sm-6">
-                <p type="text" id="bloodGroup" class="form-control" data-th-text="*{employeeDetail.bloodGroup}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="civilStatus">Martial Status</label>
-            <div class="col-sm-6">
-                <p type="text" id="civilStatus" class="form-control" data-th-text="*{employeeDetail.civilStatus}">
-            </div>
-        </div>
-
-    </div>
-    <div class="col-sm-4">
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${address}">Address</label>
-            <div class="col-sm-6">
-                <p type="text" id="address" class="form-control" data-th-text="*{employeeDetail.address}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${address}">Mobile number</label>
-            <div class="col-sm-6">
-                <p type="text" id="mobileOne" class="form-control" data-th-text="*{employeeDetail.mobileOne}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${land}">Fixed number</label>
-            <div class="col-sm-6">
-                <p type="text" id="land" class="form-control" data-th-text="*{employeeDetail.land}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${email}">Email</label>
-            <div class="col-sm-6">
-                <p type="text" id="email" class="form-control" data-th-text="*{employeeDetail.email}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${designation}">Designation</label>
-            <div class="col-sm-6">
-                <p type="text" id="designation" class="form-control" data-th-text="*{employeeDetail.designation}">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-6 control-label" data-th-for="${dateOfAssignment}">Date of Assignment</label>
-            <div class="col-sm-6">
-                <p type="text" id="dateOfAssignment" class="form-control" data-th-text="*{employeeDetail.dateOfAssignment}">
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-3">
-<!--        TODO : methenta PHOTOGRAPGH ek ena wdiyta configuration part ek add krganna oone-->
-    </div>
+    <br/>
 </div>
 
-<!--footer include-->
-<footer data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div  data-th-replace="~{fragments/footer :: footerFragment}"></footer>
 <!--script include-->
 <script data-th-replace="~{fragments/script :: scriptFragment}"></script>
 
